feat: json.server config

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "json-server --watch server.json -d 500",
     "build": "tsc && vite build",
     "lint": "eslint src --ext .tsx,.ts",
     "lint:fix": "eslint src --ext .tsx,.ts --fix",
     "preview": "vite preview"
+  
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
